 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
  >
 
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_normal"
      android:text="@string/exam_info_intro"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_large"
      android:textStyle="bold"
      android:text="@string/exam_info_theorie_headline"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_normal"
      android:text="@string/exam_info_theorie_text"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_large"
      android:textStyle="bold"
      android:text="@string/exam_info_praxis_headline"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_normal"
      android:text="@string/exam_info_praxis_text"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_large"
      android:textStyle="bold"
      android:text="@string/exam_info_knoten_headline"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:paddingBottom="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_normal"
      android:text="@string/exam_info_knoten_text"
    />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/component_padding_vertical"
      android:textSize="@dimen/font_size_normal"
      android:linksClickable="true"
      android:autoLink="web"
      android:text="@string/exam_info_disclaimer"
    />
  </LinearLayout>
</ScrollView>
