<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.dev.eth0.fuehrerschein.startScreenActivity" >
    
  <!-- <item android:id="@+id/menu_start_screen_settings"
        app:showAsAction="never"
  android:title="@string/settings_title"/>-->
        <item
          android:id="@+id/menu_start_screen_about"
          app:showAsAction="never"
          android:title="@string/about_title"/>
          <item
            android:id="@+id/menu_start_screen_feedback"
            app:showAsAction="never"
            android:title="@string/feedback_title"/>
          <item
            android:id="@+id/menu_help"
            app:showAsAction="never"
            android:title="@string/help_title"/>
</menu>
