<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:ignore="ContentDescription">

  <TextView
    android:id="@+id/statistics_headline"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/font_size_large"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_complete_progress"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_complete_progress"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_no_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_no_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_1_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_1_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_2_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_2_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_3_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_3_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_4_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_4_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/statistics_5_correct_answers"
    android:paddingTop="@dimen/component_padding_vertical"
  />
  <de.dev.eth0.fuehrerschein.ui.views.ProgressbarWithText
    android:id="@+id/statistics_5_correct_answers"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/component_padding_vertical"
  />

</LinearLayout>
