<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none" >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical" >

    <TextView
      android:id="@+id/report_issue_dialog_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/component_padding_vertical"
      android:layout_marginLeft="@dimen/component_padding_horizontal"
      android:layout_marginRight="@dimen/component_padding_horizontal"
      android:layout_marginTop="@dimen/component_padding_vertical"
    />

    <EditText
      android:id="@+id/report_issue_dialog_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/component_padding_vertical"
      android:layout_marginLeft="@dimen/component_padding_horizontal"
      android:layout_marginRight="@dimen/component_padding_horizontal"
      android:layout_marginTop="@dimen/component_padding_vertical"
      android:hint="@string/report_issue_dialog_description"
      android:inputType="text|textCapSentences|textMultiLine" />

    <CheckBox
      android:id="@+id/report_issue_dialog_collect_device_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/component_padding_vertical"
      android:layout_marginLeft="@dimen/component_padding_horizontal"
      android:layout_marginRight="@dimen/component_padding_horizontal"
      android:layout_marginTop="@dimen/component_padding_vertical"
      android:checked="true"
      android:text="@string/report_issue_dialog_collect_device_info"
    />

    <CheckBox
      android:id="@+id/report_issue_dialog_collect_application_log"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/component_padding_vertical"
      android:layout_marginLeft="@dimen/component_padding_horizontal"
      android:layout_marginRight="@dimen/component_padding_horizontal"
      android:layout_marginTop="@dimen/component_padding_vertical"
      android:checked="true"
      android:text="@string/report_issue_dialog_collect_application_log" />

  </LinearLayout>

</ScrollView>